# course_work_5

./: pyproject.toml
course_work_5/: .gitignore  README.md
course_work_5/database_creation/: database_creation.py  get_vacancy_API.py
course_work_5/database_creation/source/: constants.py  funcs.py
course_work_5/source/: funcs.py
database_working/: main.py
database_working/source/: dbmanager.py
