[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["Dmitry Krasheninnikov <ice_eyes@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
